[package]
name = "druid-ui"
version = "0.0.0"
edition = "2021"
authon = "ruomeng"
license = "MIT OR Apache-2.0"
description = "Beautification package for Druid client"
keywords = ["druid","ui","druid-ui"]
#repository = "https://github.com/dream45678/generate_sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
