[package]
name = "druid-ui"
version = "0.0.1"
edition = "2021"
authon = "ruomeng"
license = "MIT OR Apache-2.0"
description = "Beautification package for Druid client"
keywords = ["druid","ui","druid-ui"]
#repository = "https://github.com/dream45678/generate_sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {git = "https://github.com/linebender/druid.git",features = ["image-all"]}
druid-shell = {git = "https://github.com/linebender/druid.git"}
tracing = "0.1.36"